# 4BIGD_final_project

./: README.md  docker-compose.yml
hadoop-master/: Dockerfile  core-site.xml  entrypoint.sh  hadoop-env.sh  hdfs-site.xml
pyspark/: Dockerfile  dataset_downloader.py  main.py  pipeline.py  pyproject.toml
