[tool.poetry]
name = "imdb_pipeline"
version = "0.1.0"
description = ""
authors = ["Olivier Neve"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pymongo = "^4.7.3"
pyspark = "^3.5.1"
hdfs = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
